--- a/[NRC_6292]_ZambranoJunior_Lab1Unidad3_V1.ipynb
+++ b/[NRC_6292]_ZambranoJunior_Lab1Unidad3_V1.ipynb
@@ -321,7 +321,127 @@
       "Processing Image - 117 in motor\n",
       "Processing Image - 118 in motor\n",
       "Processing Image - 119 in motor\n",
-      "Processing Image - 120 in motor\n"
+      "Processing Image - 120 in motor\n",
+      "Processing Image - 1 in trunk\n",
+      "Processing Image - 2 in trunk\n",
+      "Processing Image - 3 in trunk\n",
+      "Processing Image - 4 in trunk\n",
+      "Processing Image - 5 in trunk\n",
+      "Processing Image - 6 in trunk\n",
+      "Processing Image - 7 in trunk\n",
+      "Processing Image - 8 in trunk\n",
+      "Processing Image - 9 in trunk\n",
+      "Processing Image - 10 in trunk\n",
+      "Processing Image - 11 in trunk\n",
+      "Processing Image - 12 in trunk\n",
+      "Processing Image - 13 in trunk\n",
+      "Processing Image - 14 in trunk\n",
+      "Processing Image - 15 in trunk\n",
+      "Processing Image - 16 in trunk\n",
+      "Processing Image - 17 in trunk\n",
+      "Processing Image - 18 in trunk\n",
+      "Processing Image - 19 in trunk\n",
+      "Processing Image - 20 in trunk\n",
+      "Processing Image - 21 in trunk\n",
+      "Processing Image - 22 in trunk\n",
+      "Processing Image - 23 in trunk\n",
+      "Processing Image - 24 in trunk\n",
+      "Processing Image - 25 in trunk\n",
+      "Processing Image - 26 in trunk\n",
+      "Processing Image - 27 in trunk\n",
+      "Processing Image - 28 in trunk\n",
+      "Processing Image - 29 in trunk\n",
+      "Processing Image - 30 in trunk\n",
+      "Processing Image - 31 in trunk\n",
+      "Processing Image - 32 in trunk\n",
+      "Processing Image - 33 in trunk\n",
+      "Processing Image - 34 in trunk\n",
+      "Processing Image - 35 in trunk\n",
+      "Processing Image - 36 in trunk\n",
+      "Processing Image - 37 in trunk\n",
+      "Processing Image - 38 in trunk\n",
+      "Processing Image - 39 in trunk\n",
+      "Processing Image - 40 in trunk\n",
+      "Processing Image - 41 in trunk\n",
+      "Processing Image - 42 in trunk\n",
+      "Processing Image - 43 in trunk\n",
+      "Processing Image - 44 in trunk\n",
+      "Processing Image - 45 in trunk\n",
+      "Processing Image - 46 in trunk\n",
+      "Processing Image - 47 in trunk\n",
+      "Processing Image - 48 in trunk\n",
+      "Processing Image - 49 in trunk\n",
+      "Processing Image - 50 in trunk\n",
+      "Processing Image - 51 in trunk\n",
+      "Processing Image - 52 in trunk\n",
+      "Processing Image - 53 in trunk\n",
+      "Processing Image - 54 in trunk\n",
+      "Processing Image - 55 in trunk\n",
+      "Processing Image - 56 in trunk\n",
+      "Processing Image - 57 in trunk\n",
+      "Processing Image - 58 in trunk\n",
+      "Processing Image - 59 in trunk\n",
+      "Processing Image - 60 in trunk\n",
+      "Processing Image - 61 in trunk\n",
+      "Processing Image - 62 in trunk\n",
+      "Processing Image - 63 in trunk\n",
+      "Processing Image - 64 in trunk\n",
+      "Processing Image - 65 in trunk\n",
+      "Processing Image - 66 in trunk\n",
+      "Processing Image - 67 in trunk\n",
+      "Processing Image - 68 in trunk\n",
+      "Processing Image - 69 in trunk\n",
+      "Processing Image - 70 in trunk\n",
+      "Processing Image - 71 in trunk\n",
+      "Processing Image - 72 in trunk\n",
+      "Processing Image - 73 in trunk\n",
+      "Processing Image - 74 in trunk\n",
+      "Processing Image - 75 in trunk\n",
+      "Processing Image - 76 in trunk\n",
+      "Processing Image - 77 in trunk\n",
+      "Processing Image - 78 in trunk\n",
+      "Processing Image - 79 in trunk\n",
+      "Processing Image - 80 in trunk\n",
+      "Processing Image - 81 in trunk\n",
+      "Processing Image - 82 in trunk\n",
+      "Processing Image - 83 in trunk\n",
+      "Processing Image - 84 in trunk\n",
+      "Processing Image - 85 in trunk\n",
+      "Processing Image - 86 in trunk\n",
+      "Processing Image - 87 in trunk\n",
+      "Processing Image - 88 in trunk\n",
+      "Processing Image - 89 in trunk\n",
+      "Processing Image - 90 in trunk\n",
+      "Processing Image - 91 in trunk\n",
+      "Processing Image - 92 in trunk\n",
+      "Processing Image - 93 in trunk\n",
+      "Processing Image - 94 in trunk\n",
+      "Processing Image - 95 in trunk\n",
+      "Processing Image - 96 in trunk\n",
+      "Processing Image - 97 in trunk\n",
+      "Processing Image - 98 in trunk\n",
+      "Processing Image - 99 in trunk\n",
+      "Processing Image - 100 in trunk\n",
+      "Processing Image - 101 in trunk\n",
+      "Processing Image - 102 in trunk\n",
+      "Processing Image - 103 in trunk\n",
+      "Processing Image - 104 in trunk\n",
+      "Processing Image - 105 in trunk\n",
+      "Processing Image - 106 in trunk\n",
+      "Processing Image - 107 in trunk\n",
+      "Processing Image - 108 in trunk\n",
+      "Processing Image - 109 in trunk\n",
+      "Processing Image - 110 in trunk\n",
+      "Processing Image - 111 in trunk\n",
+      "Processing Image - 112 in trunk\n",
+      "Processing Image - 113 in trunk\n",
+      "Processing Image - 114 in trunk\n",
+      "Processing Image - 115 in trunk\n",
+      "Processing Image - 116 in trunk\n",
+      "Processing Image - 117 in trunk\n",
+      "Processing Image - 118 in trunk\n",
+      "Processing Image - 119 in trunk\n",
+      "Processing Image - 120 in trunk\n"
      ]
     }
    ],
